--- a/03-Methods and Functions/Additional References 03-Methods and Functions.ipynb
+++ b/03-Methods and Functions/Additional References 03-Methods and Functions.ipynb
@@ -58,9 +58,7 @@
   {
    "cell_type": "markdown",
    "id": "64423ac7",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Gathering function information. "
    ]
@@ -68,72 +66,209 @@
   {
    "cell_type": "markdown",
    "id": "a2ecd962",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
-    "press shift tab at the end of the function\n",
-    "help(and function name)\n",
-    "python documentation. "
+    "* press shift tab at the end of the function\n",
+    "* help(and function name)\n",
+    "* python documentation. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "7d338401",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fa5f1a11",
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "id": "575341b6",
+   "metadata": {},
+   "source": [
+    "Map fileter "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "9fc40798",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "088686fc",
-   "metadata": {
-    "hidden": true
-   },
+   "id": "4b3efee5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20d88314",
+   "metadata": {},
+   "source": [
+    "# Map Filter and Lambda"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c24e4ce9",
+   "metadata": {},
+   "source": [
+    "#### map function\n",
+    "The map function allows you to \"map\" a function to an iterable object\n",
+    "\n",
+    "def square(num):\n",
+    "    return num**2\n",
+    "    \n",
+    "my_nums = [1,2,3,4,5]\n",
+    "\n",
+    "map(square,my_nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7cac8da7",
+   "metadata": {},
+   "source": [
+    "#### Filter function.\n",
+    "\n",
+    "The filter function returns an iterator yielding those items of iterable for which function(item) is true. Meaning you need to filter by a function that returns either True or False. Then passing that into filter (along with your iterable) and you will get back only the results that would return True when passed to the function.\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8783405",
+   "metadata": {},
+   "source": [
+    "def check_even(num):\n",
+    "    return num % 2 == 0 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7067d4d",
+   "metadata": {},
+   "source": [
+    "nums = [0,1,2,3,4,5,6,7,8,9,10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11bf508d",
+   "metadata": {},
+   "source": [
+    "filter(check_even,nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8029f25b",
+   "metadata": {},
+   "source": [
+    "list(filter(check_even,nums))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7dda725",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35097eac",
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78efe6bc",
-   "metadata": {
-    "hidden": true
-   },
+   "id": "9cb80a2b",
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f5dd1f8",
-   "metadata": {
-    "hidden": true
-   },
+   "id": "e3fdfe5d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afb4ec2f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ff120d4",
+   "metadata": {},
+   "source": [
+    "#### lambda expression\n",
+    "\n",
+    "One of Pythons most useful (and for beginners, confusing) tools is the lambda expression. lambda expressions allow us to create \"anonymous\" functions. This basically means we can quickly make ad-hoc functions without needing to properly define a function using def.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e556cb3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1afe2a07",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b8f75d8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ffda199",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3f44d1f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43332417",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
