--- a/Templates.ipynb
+++ b/Templates.ipynb
@@ -3,15 +3,19 @@
   {
    "cell_type": "markdown",
    "id": "80db93af",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "# Templates"
+    "# Different colors"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "2c1c39e9",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Blue color heading"
    ]
@@ -19,41 +23,30 @@
   {
    "cell_type": "markdown",
    "id": "1389d750",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "<span style='color:DarkBlue'> Blue is my favorite color.  </span>"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ecef17a3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "e605ce3b",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "<span style='color:Maroon'> Maroon heading  </span>  Sample."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "230d6d8e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "f30fde95",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "## Formatting Guide\n",
     "\n",
@@ -64,21 +57,57 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f2382e31",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5cd4541",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "# Creating list / Bulltet list in notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d4a1202",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "* 1\n",
+    "* 2\n",
+    "* 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "259e44e5",
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "757155d5",
-   "metadata": {},
+   "id": "5768aa0f",
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "32058855",
+   "id": "3afd25fe",
    "metadata": {},
    "source": [
     "# This is a test heading. "
@@ -87,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f8e460d",
+   "id": "caeb098c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -95,15 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e0375f5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b3dba4c1",
+   "id": "a6e1e727",
    "metadata": {},
    "outputs": [],
    "source": []
