--- a/03-Methods and Functions/Additional References 03-Methods and Functions.ipynb
+++ b/03-Methods and Functions/Additional References 03-Methods and Functions.ipynb
@@ -58,7 +58,9 @@
   {
    "cell_type": "markdown",
    "id": "64423ac7",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Gathering function information. "
    ]
@@ -66,7 +68,9 @@
   {
    "cell_type": "markdown",
    "id": "a2ecd962",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "* press shift tab at the end of the function\n",
     "* help(and function name)\n",
@@ -77,14 +81,18 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7d338401",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "id": "575341b6",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Map fileter "
    ]
@@ -93,7 +101,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9fc40798",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -101,7 +111,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4b3efee5",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -241,20 +253,25 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b8f75d8",
+   "cell_type": "markdown",
+   "id": "d700a66b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Variables Scope"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3ffda199",
+   "cell_type": "markdown",
+   "id": "647834f9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### LEGB rule\n",
+    "\n",
+    "* local\n",
+    "* enclosing\n",
+    "* Global\n",
+    "* Builtin\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -265,9 +282,55 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "b35c22ba",
+   "metadata": {},
+   "source": [
+    "# Calculating Prime numbers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32efee36",
+   "metadata": {},
+   "source": [
+    "### Youtube reference\n",
+    "https://youtu.be/tnfbde4NXMs\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f3cd010",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### Code\n",
+    "\n",
+    "def count_primes(num):\n",
+    "    primes = [2]\n",
+    "    x = 3\n",
+    "    #---------------------------------------------------------    \n",
+    "    if num < 2:  # for the case of num = 0 or 1\n",
+    "        return 0\n",
+    "    #----------------------------------------------------------\n",
+    "    while x <= num:\n",
+    "        for y in range(3,x,2):  # test all odd factors up to x-1\n",
+    "            if x%y == 0:\n",
+    "                x += 2\n",
+    "                break\n",
+    "        else:\n",
+    "            primes.append(x)\n",
+    "            x += 2\n",
+    "    \n",
+    "    #----------------------------------------------------------\n",
+    "    print(primes)\n",
+    "    return len(primes)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43332417",
+   "id": "f949cc11",
    "metadata": {},
    "outputs": [],
    "source": []
