--- a/03-Methods and Functions/Excercise/Excercise 06 Nested Statements and Scope.ipynb
+++ b/03-Methods and Functions/Excercise/Excercise 06 Nested Statements and Scope.ipynb
@@ -110,6 +110,160 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Excercises on 09th Aug 23"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Local and enclosed variable testing. \n",
+    "\n",
+    "def vartesting():\n",
+    "    #print(Varfortesting)\n",
+    "    Varfortesting = \" This is an Enclosed variable inside a function. \"\n",
+    "    def innerfunc():\n",
+    "         Varfortesting = \"This is a local variable for the function\"\n",
+    "         print(Varfortesting)\n",
+    "    innerfunc()\n",
+    "    print(Varfortesting)\n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a local variable for the function\n",
+      " This is an Enclosed variable inside a function. \n"
+     ]
+    }
+   ],
+   "source": [
+    "vartesting()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Varfortesting = \"This is a global variable for the script\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Global variable testing\n",
+    "def vartesting():\n",
+    "    #print(Varfortesting)\n",
+    "    global Varfortesting\n",
+    "#     Varfortesting = \" This is an Enclosed variable inside a function. \"\n",
+    "    def innerfunc():\n",
+    "         Varfortesting = \"This is a local variable for the function\"\n",
+    "         print(Varfortesting)\n",
+    "    innerfunc()\n",
+    "    print(Varfortesting)\n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a local variable for the function\n",
+      "This is a global variable for the script\n"
+     ]
+    }
+   ],
+   "source": [
+    "vartesting()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' This is an Enclosed variable inside a function. '"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Varfortesting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
