--- a/03-Methods and Functions/Excercise/02-Functions.ipynb
+++ b/03-Methods and Functions/Excercise/02-Functions.ipynb
@@ -713,11 +713,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "work_hours = [('Abby',100),('Billy',400),('Cassie',800)]"
+    "work_hours = [('Abby',100),('Billy',4000),('Cassie',800)]"
    ]
   },
   {
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -753,9 +753,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Billy', 4000)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "employee_check(work_hours)"
    ]
