--- a/03-Methods and Functions/Excercise/03-Function Practice Exercises.ipynb
+++ b/03-Methods and Functions/Excercise/03-Function Practice Exercises.ipynb
@@ -13,9 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Function Practice Exercises\n",
     "\n",
@@ -28,18 +26,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## WARMUP SECTION:"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "#### LESSER OF TWO EVENS: Write a function that returns the lesser of two given numbers *if* both numbers are even, but returns the greater if one or both numbers are odd\n",
     "    lesser_of_two_evens(2,4) --> 2\n",
@@ -48,11 +42,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "hidden": true
-   },
+   "execution_count": 63,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def lesser_of_two_evens(a,b):\n",
@@ -61,11 +52,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "hidden": true
-   },
+   "execution_count": 64,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Check\n",
@@ -74,11 +62,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "hidden": true
-   },
+   "execution_count": 65,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Check\n",
@@ -87,9 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "#### ANIMAL CRACKERS: Write a function takes a two-word string and returns True if both words begin with same letter\n",
     "    animal_crackers('Levelheaded Llama') --> True\n",
@@ -98,11 +81,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "hidden": true
-   },
+   "execution_count": 66,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def animal_crackers(text):\n",
@@ -111,11 +91,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "hidden": true
-   },
+   "execution_count": 67,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Check\n",
@@ -124,11 +101,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "hidden": true
-   },
+   "execution_count": 68,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Check\n",
@@ -137,9 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "#### MAKES TWENTY: Given two integers, return True if the sum of the integers is 20 *or* if one of the integers is 20. If not, return False\n",
     "\n",
@@ -150,11 +122,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "hidden": true
-   },
+   "execution_count": 69,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def makes_twenty(n1,n2):\n",
@@ -163,11 +132,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "hidden": true
-   },
+   "execution_count": 70,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Check\n",
@@ -176,15 +142,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "hidden": true
-   },
+   "execution_count": 71,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Check\n",
     "makes_twenty(2,3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# LEVEL ONE"
    ]
   },
   {
@@ -207,10 +177,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 72,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def old_macdonald(name):\n",
@@ -219,10 +187,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 73,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Check\n",
@@ -233,8 +199,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### MASTER YODA: Given a sentence, return a sentence with the words reversed\n",
-    "\n",
+    "## MASTER YODA: Given a sentence, return a sentence with the words reversed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "    master_yoda('I am home') --> 'home am I'\n",
     "    master_yoda('We are ready') --> 'ready are We'\n",
     "    \n",
@@ -250,24 +221,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 74,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def master_yoda(text):\n",
-    "    pass"
+    "    newlist = text.split()\n",
+    "    #print(newlist[::-1])\n",
+    "#     print(str(newlist[::-1]))\n",
+    "    newstring = \" \".join(newlist[::-1])\n",
+    "    print(newstring)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "home am I\n"
+     ]
+    }
+   ],
    "source": [
     "# Check\n",
     "master_yoda('I am home')"
@@ -275,15 +259,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ready are We\n"
+     ]
+    }
+   ],
    "source": [
     "# Check\n",
     "master_yoda('We are ready')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -301,50 +305,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#############################################################\n",
-    "#ALMOST THERE: Given an integer n, return True if n is within 10 of either 100 or 200\n",
-    "#almost_there(90) --> True\n",
-    "#almost_there(104) --> True\n",
-    "#almost_there(150) --> False\n",
-    "#almost_there(209) --> True\n",
-    "\n",
-    "#############################################################\n",
-    "\n",
-    "def almost_there(inputval):\n",
-    "    print(f\"Absolute value is   {abs(inputval)}\")\n",
-    "    if abs(inputval) < 10 :\n",
-    "        print(f\"You are within 10\")\n",
-    "    else:\n",
-    "        pass\n",
-    "    \n",
-    "\n",
-    "    return ((abs(100 - inputval) <= 10) or (abs(200 - inputval) <= 10))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": [
     "def almost_there(n):\n",
@@ -353,27 +315,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Absolute value is   104\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Check\n",
     "almost_there(104)"
@@ -381,38 +325,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Absolute value is   234\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Check\n",
-    "almost_there(234)"
+    "almost_there(150)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 80,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Check\n",
@@ -420,19 +344,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
+   "source": [
+    "# LEVEL TWO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# LEVEL 2 PROBLEMS"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "#### FIND 33: \n",
     "\n",
@@ -445,11 +379,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "hidden": true
-   },
+   "execution_count": 81,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def has_33(nums):\n",
@@ -458,11 +389,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "hidden": true
-   },
+   "execution_count": 82,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Check\n",
@@ -471,11 +399,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "hidden": true
-   },
+   "execution_count": 83,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Check\n",
@@ -484,11 +409,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "hidden": true
-   },
+   "execution_count": 84,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Check\n",
@@ -497,9 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "#### PAPER DOLL: Given a string, return a string where for every character in the original there are three characters\n",
     "    paper_doll('Hello') --> 'HHHeeellllllooo'\n",
@@ -508,11 +428,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "hidden": true
-   },
+   "execution_count": 85,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def paper_doll(text):\n",
@@ -521,11 +438,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "hidden": true
-   },
+   "execution_count": 86,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Check\n",
@@ -534,11 +448,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "hidden": true
-   },
+   "execution_count": 87,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Check\n",
@@ -547,9 +458,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "#### BLACKJACK: Given three integers between 1 and 11, if their sum is less than or equal to 21, return their sum. If their sum exceeds 21 *and* there's an eleven, reduce the total sum by 10. Finally, if the sum (even after adjustment) exceeds 21, return 'BUST'\n",
     "    blackjack(5,6,7) --> 18\n",
@@ -559,11 +468,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "hidden": true
-   },
+   "execution_count": 88,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def blackjack(a,b,c):\n",
@@ -572,11 +478,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "hidden": true
-   },
+   "execution_count": 89,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Check\n",
@@ -585,11 +488,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "hidden": true
-   },
+   "execution_count": 90,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Check\n",
@@ -598,11 +498,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "hidden": true
-   },
+   "execution_count": 91,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Check\n",
@@ -611,9 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "#### SUMMER OF '69: Return the sum of the numbers in the array, except ignore sections of numbers starting with a 6 and extending to the next 9 (every 6 will be followed by at least one 9). Return 0 for no numbers.\n",
     " \n",
@@ -624,11 +519,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "hidden": true
-   },
+   "execution_count": 92,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def summer_69(arr):\n",
@@ -637,11 +529,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "hidden": true
-   },
+   "execution_count": 93,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Check\n",
@@ -650,11 +539,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "hidden": true
-   },
+   "execution_count": 94,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Check\n",
@@ -663,11 +549,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "hidden": true
-   },
+   "execution_count": 95,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Check\n",
@@ -694,10 +577,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 96,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def spy_game(nums):\n",
@@ -706,10 +587,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 97,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Check\n",
@@ -718,10 +597,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 98,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Check\n",
@@ -730,10 +607,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 99,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Check\n",
@@ -745,17 +620,15 @@
    "metadata": {},
    "source": [
     "#### COUNT PRIMES: Write a function that returns the *number* of prime numbers that exist up to and including a given number\n",
-    "    count_primes(100) --> 25\n",
+    "count_primes(100) --> 25\n",
     "\n",
     "By convention, 0 and 1 are not prime."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 107,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def count_primes(num):\n",
@@ -765,10 +638,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 108,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Check\n",
@@ -793,10 +664,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 109,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def print_big(letter):\n",
@@ -805,10 +674,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 110,
+   "metadata": {},
    "outputs": [],
    "source": [
     "print_big('a')"
@@ -820,6 +687,76 @@
    "source": [
     "## Great Job!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
