--- a/Notes from Abdul Azeez.ipynb
+++ b/Notes from Abdul Azeez.ipynb
@@ -214,6 +214,84 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15e59e92",
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5a20a5a",
+   "metadata": {},
+   "source": [
+    "# JUPYTER NOTEBOOK THEMES."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48631278",
+   "metadata": {},
+   "source": [
+    "##### How to Change your Jupyter Notebook Theme (Dark Theme!!)\n",
+    "\n",
+    "https://youtu.be/DnkxaEgen0E\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1bfdfbe",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "380f601d",
+   "metadata": {},
+   "source": [
+    "##### 1 * To install jupyter themes:--\n",
+    "    !pip install jupyterthemes\n",
+    "\n",
+    "#####  2 * To list all the available themes\n",
+    "\n",
+    "$ jt -l\n",
+    "    Available Themes:---\n",
+    "       chesterish\n",
+    "       grade3\n",
+    "       gruvboxd\n",
+    "       gruvboxl\n",
+    "       monokai\n",
+    "       oceans16\n",
+    "       onedork\n",
+    "       solarizedd\n",
+    "       solarizedl\n",
+    "\n",
+    "##### 3 * switching to a theme:\n",
+    "    azi@LAPTOP-1QD0MRUB /cygdrive/c/Users/azi/My Documents/GitHub/Complete-Python-3-Bootcamp\n",
+    "    $ jt -t monokai\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b70e697a",
+   "metadata": {},
+   "source": [
+    "https://stackoverflow.com/questions/46510192/change-the-theme-in-jupyter-notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b2a627b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
