--- a/Notes from Abdul Azeez.ipynb
+++ b/Notes from Abdul Azeez.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f1d6bfb0",
    "metadata": {
     "heading_collapsed": true
    },
@@ -12,7 +11,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3752740",
    "metadata": {
     "hidden": true
    },
@@ -30,7 +28,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "005e9452",
    "metadata": {
     "hidden": true
    },
@@ -39,7 +36,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36163bb6",
    "metadata": {
     "hidden": true
    },
@@ -50,7 +46,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9468e122",
    "metadata": {
     "hidden": true
    },
@@ -60,7 +55,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f9c7b00",
    "metadata": {
     "hidden": true
    },
@@ -72,7 +66,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02ed1265",
    "metadata": {
     "hidden": true
    },
@@ -81,7 +74,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1e130a3",
    "metadata": {
     "heading_collapsed": true
    },
@@ -91,7 +83,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a090a02",
    "metadata": {
     "heading_collapsed": true,
     "hidden": true
@@ -103,7 +94,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0c5de53",
    "metadata": {
     "hidden": true
    },
@@ -148,7 +138,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6deb68a1",
    "metadata": {
     "hidden": true
    },
@@ -158,7 +147,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0b199cf",
    "metadata": {
     "hidden": true
    },
@@ -178,7 +166,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbde0acb",
    "metadata": {
     "hidden": true
    },
@@ -187,7 +174,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1059a4c3",
    "metadata": {
     "heading_collapsed": true
    },
@@ -197,7 +183,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "232dfb1b",
    "metadata": {
     "hidden": true
    },
@@ -208,7 +193,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49439f61",
    "metadata": {
     "hidden": true
    },
@@ -218,7 +202,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15e59e92",
    "metadata": {
     "hidden": true
    },
@@ -227,7 +210,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5a20a5a",
    "metadata": {},
    "source": [
     "# JUPYTER NOTEBOOK THEMES."
@@ -235,8 +217,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48631278",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "##### How to Change your Jupyter Notebook Theme (Dark Theme!!)\n",
     "\n",
@@ -245,19 +228,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1bfdfbe",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "380f601d",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "##### 1 * To install jupyter themes:--\n",
+    "##### 1 * To install jupyter themes ( Install directly from Jupyter notebook):--\n",
     "    !pip install jupyterthemes\n",
     "\n",
-    "#####  2 * To list all the available themes\n",
+    "#####  2 * To list all the available themes ( Can also be run from jupyter notebook)\n",
     "\n",
     "$ jt -l\n",
     "    Available Themes:---\n",
@@ -274,12 +259,20 @@
     "##### 3 * switching to a theme:\n",
     "    azi@LAPTOP-1QD0MRUB /cygdrive/c/Users/azi/My Documents/GitHub/Complete-Python-3-Bootcamp\n",
     "    $ jt -t monokai\n",
+    "    !jt -t oceans16\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b70e697a",
+   "metadata": {},
+   "source": [
+    "#### To Run from jupyter notebook\n",
+    "!jt -t oceans16"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "https://stackoverflow.com/questions/46510192/change-the-theme-in-jupyter-notebook"
@@ -288,7 +281,50 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b2a627b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!jt -t oceans16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -296,7 +332,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -310,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
